; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_proresenc_kostya.c_encode_slice_plane.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_proresenc_kostya.c_encode_slice_plane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32*, i32, i32, i32*, i32, i32, i32*)* @encode_slice_plane to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_slice_plane(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32 %6, i32 %7, i32* %8) #0 {
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32* %8, i32** %18, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = call i32 @put_bits_count(i32* %21)
  store i32 %22, i32* %20, align 4
  %23 = load i32, i32* %14, align 4
  %24 = load i32, i32* %16, align 4
  %25 = mul nsw i32 %23, %24
  store i32 %25, i32* %19, align 4
  %26 = load i32*, i32** %11, align 8
  %27 = load i32*, i32** %15, align 8
  %28 = load i32, i32* %19, align 4
  %29 = load i32*, i32** %18, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @encode_dcs(i32* %26, i32* %27, i32 %28, i32 %31)
  %33 = load i32*, i32** %11, align 8
  %34 = load i32*, i32** %15, align 8
  %35 = load i32, i32* %19, align 4
  %36 = load i32, i32* %17, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32*, i32** %18, align 8
  %41 = call i32 @encode_acs(i32* %33, i32* %34, i32 %35, i32 %36, i32 %39, i32* %40)
  %42 = load i32*, i32** %11, align 8
  %43 = call i32 @flush_put_bits(i32* %42)
  %44 = load i32*, i32** %11, align 8
  %45 = call i32 @put_bits_count(i32* %44)
  %46 = load i32, i32* %20, align 4
  %47 = sub nsw i32 %45, %46
  %48 = ashr i32 %47, 3
  ret i32 %48
}

declare dso_local i32 @put_bits_count(i32*) #1

declare dso_local i32 @encode_dcs(i32*, i32*, i32, i32) #1

declare dso_local i32 @encode_acs(i32*, i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @flush_put_bits(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
